remove set cursor style at HandleDrag

This cl remove setting cursor style to default cursor in HandleDrag.

The SetCursor here is before reach drag threshold, we shouldn't do it
here because drag may not going to start.
We always update cursor style on mousemove events, setting cursor here
may cause cursor blink when mousedown on a draggable item and slowly
move.
Drag-and-drop will control the cursor after start dragging, so
no need to setting cursor.

Bug: 799799
Change-Id: I9168d05f3b861a5e50dbb0b7e9e1bb5e5ebe19b1
Reviewed-on: https://chromium-review.googlesource.com/941504
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Commit-Queue: Ella Ge <eirage@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540726}
Former-commit-id: e4486f86826612a6b9431658dfec8dcaebbeb1fe